Name correction in README
NPM refused to publish this package under the name ‘dirls’, so it is renamed to ‘@georgenet/dirls’

Signed-off-by: GeorgeNet <g@bougakov.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dirls",
+  "name": "@georgenet/dirls",
   "version": "1.0.0",
   "description": "Get contents of a directory",
   "main": "index.js",
