--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "xo": {
     "space": true,
     "semicolon": false,
-    "ignores": ["docs", ".vuepress", "testdir"]
+    "ignores": [
+      "docs",
+      ".vuepress",
+      "testdir"
+    ]
   }
 }
